Dorlet ezabatu. Grafikak denentzat

--- a/app/Resources/views/arreta/edit.html.twig
+++ b/app/Resources/views/arreta/edit.html.twig
@@ -439,24 +439,24 @@
 {% endblock content_content %}
 
 {% block content_sidebar %}
-    <div class="row">
-        <div class="col-xs-12">
-            <label for="txtNan">N.A.N.</label>
-            <input id="txtNan" name="txtNan" type="text" value="">
-            <button id="btnNan"><i class="fa fa-search"></i></button>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-xs-12">
-            <dl>
-                <dt>Etxebizitza zenbakia</dt>
-                <dt id="txtBizilekuZenbakia"></dt>
-                <dt>Izen Abizenak</dt>
-                <dd id="txtFullName"></dd>
-                <dt>Txartelak</dt>
-                <dd id="txtTxartelak"></dd>
-            </dl>
-        </div>
-    </div>
+    {#<div class="row">#}
+        {#<div class="col-xs-12">#}
+            {#<label for="txtNan">N.A.N.</label>#}
+            {#<input id="txtNan" name="txtNan" type="text" value="">#}
+            {#<button id="btnNan"><i class="fa fa-search"></i></button>#}
+        {#</div>#}
+    {#</div>#}
+    {#<div class="row">#}
+        {#<div class="col-xs-12">#}
+            {#<dl>#}
+                {#<dt>Etxebizitza zenbakia</dt>#}
+                {#<dt id="txtBizilekuZenbakia"></dt>#}
+                {#<dt>Izen Abizenak</dt>#}
+                {#<dd id="txtFullName"></dd>#}
+                {#<dt>Txartelak</dt>#}
+                {#<dd id="txtTxartelak"></dd>#}
+            {#</dl>#}
+        {#</div>#}
+    {#</div>#}
 {% endblock content_sidebar %}
 
