--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -66,6 +66,8 @@
 
 {% block menu %}
     {% if is_granted('ROLE_ADMIN') %}
+        {{ mopa_bootstrap_menu('AppBundle:Builder:adminMenu', {'automenu':'navbar', 'currentClass': ''}) }}
+    {% else %}
         {{ mopa_bootstrap_menu('AppBundle:Builder:mainMenu', {'automenu':'navbar', 'currentClass': ''}) }}
     {% endif %}
     <div class="pull-right">
