--- a/app/Resources/views/arreta/edit.html.twig
+++ b/app/Resources/views/arreta/edit.html.twig
@@ -374,7 +374,7 @@
                             <div class="row">
                                 <div class="col-sm-12">
                                     <label for="helbidea" class="control-label">Helbidea:</label>
-                                    <select name="helbidea" id="helbidea" class="form-control">
+                                    <select name="address[address]" id="helbidea" class="form-control">
                                         <option value="-1">Aukeratu...</option>
                                     </select>
                                 </div>
@@ -402,6 +402,8 @@
                         </div>
                         <input type="hidden" name="version" value="2">
                         <input type="hidden" name="key" value="{{ horkonpon }}">
+                        <input id="username" type="hidden" name="username" value="{{ app.user.email }} ">
+
                     </form>
                 </div>
                 <div class="modal-footer">
